# Customer-Support-AI

./: .env.example  .gitignore  DEVELOPMENT.md  FAISS_COMMANDS.md  FAISS_IMPLEMENTATION_SUMMARY.md  FAISS_KNOWLEDGE_BASE.md  QUICKSTART_FAISS.md  README.md  main.py  pyproject.toml  requirements.txt
scripts/: example_kb_usage.py  populate_knowledge_base.py  test_kb_integration.py
src/: __init__.py
src/api/: app.py
src/api/routes/: emails.py  health.py  ui.py
src/core/: __init__.py  config.py  logging.py
src/db/: __init__.py  database.py  models.py
src/graph/: __init__.py  state.py  workflow.py
src/nodes/: __init__.py  classification.py  context_analysis.py  email_retrieval.py  error_handler.py  factory.py  followup_scheduling.py  human_review.py  response_generation.py  response_sending.py  review_check.py  review_routing.py
src/prompts/: __init__.py  templates.py
src/schemas/: __init__.py  email.py  graph.py
src/services/: base.py  db_service.py  email_service.py  kb_service.py  llm_service.py  review_service.py  schedule_service.py  vector_kb_service.py
src/templates/: base.html  inbox.html  test_email.html
src/utils/: helpers.py
tests/: conftest.py  test_health.py
