[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-support-email-agent"
version = "0.1.0"
description = "A LangGraph-based intelligent customer support email agent"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

keywords = [
    "langchain",
    "langgraph",
    "fastapi",
    "email",
    "customer-support",
    "ai",
    "llm"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.1.0",
    "langgraph>=0.1.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-core>=0.2.19",
    "openai>=1.26.0",
    "imap-tools>=1.6.0",
    "email-validator>=2.1.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "schedule>=1.2.0",
    "APScheduler>=3.10.0",
    "loguru>=0.7.0",
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "types-python-dateutil>=2.8.0",
    "types-pytz>=2023.3.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | venv
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
]
ignore = [
    "E501",   # line too long (handled by black)
    "W191",   # indentation contains tabs
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "langgraph.*",
    "langchain.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --strict-markers"
markers = [
    "async: marks tests as async (deselect with '-m \"not async\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
